--- a/AdaptiveLayoutExercise/Base.lproj/Main.storyboard
+++ b/AdaptiveLayoutExercise/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,83 +19,120 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iphone_layout_image" translatesAutoresizingMaskIntoConstraints="NO" id="Dml-iQ-lzg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="center" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lpZ-mG-ppF">
-                                <rect key="frame" x="0.0" y="222.5" width="375" height="244.5"/>
+                                <rect key="frame" x="0.0" y="133" width="768" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Mistakes are proof that you are trying.&quot;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6v2-zN-ab8">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="768" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Hardships often prepare ordinary people for an extraordinary destiny.&quot; —C.S. Lewis" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08z-W0-af8">
-                                        <rect key="frame" x="0.0" y="35.5" width="375" height="41"/>
+                                        <rect key="frame" x="0.0" y="15" width="768" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Your value doesn't decrease based on someone's inability to see your worth.&quot;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjp-W3-c6a">
-                                        <rect key="frame" x="0.0" y="91.5" width="375" height="41"/>
+                                        <rect key="frame" x="0.0" y="30" width="768" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Remember, today is the tomorrow you worried about yesterday.&quot; —Dale Carnegie" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9R3-Tf-u0K">
-                                        <rect key="frame" x="0.0" y="147.5" width="375" height="41"/>
+                                        <rect key="frame" x="0.0" y="45" width="768" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Some days there won't be a song in your heart. Sing anyway.&quot; —Emory Austin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jG-2C-UMw">
-                                        <rect key="frame" x="0.0" y="203.5" width="375" height="41"/>
+                                        <rect key="frame" x="0.0" y="60" width="768" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        </variation>
                                     </label>
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep Coding! You Can Do It!!!!!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iza-2u-mkx">
-                                <rect key="frame" x="113.5" y="626.5" width="245.5" height="20.5"/>
+                                <rect key="frame" x="266" y="983" width="482" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.95344705031287791" green="1" blue="0.17044513015968854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Life Chaning Words" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsw-5u-C3B">
-                                <rect key="frame" x="16" y="74" width="343" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <color key="textColor" red="1" green="0.37614662731081661" blue="0.23274721348748095" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Life Changing Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gz1-01-dKc">
+                                <rect key="frame" x="20" y="40" width="728" height="55"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <color key="textColor" red="1" green="0.87256659157922334" blue="0.13250042208267454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                </variation>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="number_one.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="UE6-Er-niO">
+                                <rect key="frame" x="508" y="793" width="240" height="160"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.8731591615278238" green="1" blue="0.88971838126789193" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lpZ-mG-ppF" secondAttribute="bottom" constant="200" id="1iT-wR-eDy"/>
-                            <constraint firstAttribute="trailing" secondItem="Dml-iQ-lzg" secondAttribute="trailing" id="1kb-sc-39Q"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Iza-2u-mkx" secondAttribute="trailing" id="5cZ-wB-5KY"/>
-                            <constraint firstItem="lpZ-mG-ppF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="AJe-kX-Q4x"/>
-                            <constraint firstAttribute="trailing" secondItem="lpZ-mG-ppF" secondAttribute="trailing" id="EKb-4p-Ned"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Iza-2u-mkx" secondAttribute="bottom" constant="20" id="VqL-W7-tPi"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bsw-5u-C3B" secondAttribute="trailing" id="WHy-nx-wLT"/>
-                            <constraint firstItem="Dml-iQ-lzg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aq0-qD-DcR"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Dml-iQ-lzg" secondAttribute="bottom" id="cGK-nK-Mbl"/>
-                            <constraint firstItem="bsw-5u-C3B" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="54" id="flY-AB-tuY"/>
-                            <constraint firstItem="bsw-5u-C3B" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="q6w-bM-Xr4"/>
-                            <constraint firstItem="Dml-iQ-lzg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="uns-q5-WUi"/>
+                            <constraint firstItem="Gz1-01-dKc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1Ii-vY-YlX"/>
+                            <constraint firstItem="Iza-2u-mkx" firstAttribute="top" secondItem="UE6-Er-niO" secondAttribute="bottom" constant="30" id="9Vp-PI-2t0"/>
+                            <constraint firstItem="Gz1-01-dKc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="JVQ-0U-snD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Gz1-01-dKc" secondAttribute="trailing" id="Lh7-Qf-GE5"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Dml-iQ-lzg" secondAttribute="bottom" id="Mox-1z-LlI"/>
+                            <constraint firstAttribute="trailing" secondItem="Dml-iQ-lzg" secondAttribute="trailing" id="RIa-s3-o3s"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Iza-2u-mkx" secondAttribute="bottom" id="aeZ-Ds-N5I"/>
+                            <constraint firstItem="lpZ-mG-ppF" firstAttribute="top" secondItem="Gz1-01-dKc" secondAttribute="bottom" constant="38" id="dlA-Kr-RXw"/>
+                            <constraint firstAttribute="trailing" secondItem="lpZ-mG-ppF" secondAttribute="trailing" id="h8y-NA-4sH"/>
+                            <constraint firstItem="UE6-Er-niO" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hrO-Xx-xn1"/>
+                            <constraint firstItem="Dml-iQ-lzg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lXc-R7-Kx3"/>
+                            <constraint firstItem="Iza-2u-mkx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="wCb-mL-92i"/>
+                            <constraint firstItem="Dml-iQ-lzg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zQo-Rk-yJc"/>
+                            <constraint firstItem="lpZ-mG-ppF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zjQ-a3-PHL"/>
                         </constraints>
+                        <variation key="heightClass=compact-widthClass=regular">
+                            <mask key="subviews">
+                                <exclude reference="UE6-Er-niO"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <exclude reference="UE6-Er-niO"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="127.28635682158921"/>
+            <point key="canvasLocation" x="109.59999999999999" y="64.31784107946028"/>
         </scene>
     </scenes>
     <resources>
-        <image name="iphone_layout_image" width="3600" height="2400"/>
+        <image name="iphone_layout_image" width="3000" height="2000"/>
+        <image name="number_one.jpeg" width="240" height="160"/>
     </resources>
 </document>
